<resources>
    <string name="app_name">MyCar</string>
    <string name="search">Поиск</string>
    <string name="auto_mark">Марка</string>
    <string name="audi">Audi</string>
    <string name="engine_capacity">Объём двигателя</string>
    <string name="date_of_publish">Дата публикации</string>
    <string name="_3_2">3.2</string>
    <string name="date">date</string>
    <string name="fill_please">Заполните поле!</string>
</resources>