<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/borderColor"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/markFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#00000000"
            android:hint="@string/auto_mark"
            android:padding="16dp" />

        <EditText
            android:id="@+id/engineCapacityFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#00000000"
            android:inputType="numberDecimal"
            android:hint="@string/engine_capacity"
            android:padding="16dp" />

        <EditText
            android:id="@+id/dateOfPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:hint="@string/date_of_publish"
            android:padding="16dp" />

        <Button
            android:id="@+id/filterBtn"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>