<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:contentPadding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_mark"
                android:textColor="@color/midGray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engine_capacity"
                android:textColor="@color/midGray"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audi"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/engineCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_2"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>